# termiplay

./: .gitignore  Cargo.toml  LICENSE  README.md
compilation_tmp/: termiplay_frame_1779176650521376601.rgb  termiplay_frame_1779176650540931623.rgb  termiplay_frame_1779176650558922213.rgb  termiplay_frame_1779176650595275010.rgb  termiplay_frame_1779176650634744846.rgb  termiplay_frame_1779176650666665153.rgb  termiplay_frame_1779176650668140454.rgb  termiplay_frame_1779176650670659624.rgb  termiplay_frame_1779176650672229240.rgb  termiplay_frame_1779176650679614499.rgb  termiplay_frame_1779176650693772402.rgb  termiplay_frame_1779176650710039741.rgb  termiplay_frame_1779176650726959302.rgb  termiplay_frame_1779176650743836164.rgb  termiplay_frame_1779176650758210247.rgb  termiplay_frame_1779176650775519427.rgb  termiplay_frame_1779176650791112103.rgb  termiplay_frame_1779176650807953232.rgb  termiplay_frame_1779176650824073174.rgb  termiplay_frame_1779176650840193911.rgb  termiplay_frame_1779176650856418134.rgb  termiplay_frame_1779176650872533881.rgb  termiplay_frame_1779176650886614070.rgb  termiplay_frame_1779176650902950536.rgb  termiplay_frame_1779176650919007974.rgb  termiplay_frame_1779176650935051454.rgb  termiplay_frame_1779176650949178602.rgb  termiplay_frame_1779176650965252161.rgb  termiplay_frame_1779176650979390895.rgb  termiplay_frame_1779176650995612797.rgb  termiplay_frame_1779176651009682653.rgb  termiplay_frame_1779176651025829300.rgb  termiplay_frame_1779176651041964852.rgb  termiplay_frame_1779176651058069404.rgb  (+594 more)
src/: main.rs
src/audio/: mod.rs
(+6 files in other folders)
