[package]
name = "termiplay"
version = "0.1.0"
edition = "2021"
authors = ["TermiPlay Team"]
description = "A high-performance terminal video player"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
ffmpeg-next = "8.1.0"
base64 = "0.21"
rodio = "0.17"

